intrusion-prevention/allowed_repos/pod_test_deny.yaml
apiVersion: v1
kind: Pod
metadata:
 namespace: opa-test
 name: testtt
spec:
 containers:
  - name: testi
    image: ghcr.io/nginx
